@@ -1,3 +1,3 @@
 PROJNAME=zeo
-VERSION=1.17.18
-DEPENDENCY="zeda=1.10.1;zm=1.9.17"
+VERSION=1.17.19
+DEPENDENCY="zeda=1.10.2;zm=1.10.1"
