@@ -1,3 +1,4 @@
+2025. 1.22. Reflected renaming of zEqual. [zeo_coord2d, test]
 2025. 1.18. Added const qualifiers to some functions. [zeo_render_texture, zeo_coord2d]
 2025. 1.18. Renamed zRGBDec to zRGBDecodeStr. [zeo_render_color]
 2025. 1.18. Applied ZDEF_STRUCT to zRGB and zTexture. [zeo_render_color, zeo_render_texture]
